[package]
name = "async-await-test"
version = "0.1.0"
authors = ["Miquel van Smoorenburg <mikevs@xs4all.net>"]
edition = "2018"

[dependencies]
futures = { package = "futures", version = "0.1" }
futures03 = { package = "futures-preview", version = "0.3.0-alpha.12", features = ["io-compat"] }
hyper = "0.12"
tokio = "0.1.15"
bytes = "0.4.11"
http = "0.1.15"
tokio-threadpool = "0.1.11"
